[package]
name = "goobus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alot = "0.3.1"
anyhow = { version = "1.0.75", features = ["backtrace"] }
gooey = "0.1.3"
pot = "3.0.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_bytes = "0.11.12"
tokio = { version = "1.35.1", features = [
    "rt",
    "net",
    "time",
    "sync",
    "io-util",
] }

[patch.crates-io]
gooey = { git = "https://github.com/khonsulabs/gooey" }
